--- a/WinFormsClient/WinFormsClient.csproj
+++ b/WinFormsClient/WinFormsClient.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IPv4AddressTextBox, Version=1.0.0.2, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\IPv4AddressTextBox.1.0.0.4\lib\net20\IPv4AddressTextBox.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -72,6 +76,7 @@
     <EmbeddedResource Include="WinFormsClient.resx">
       <DependentUpon>WinFormsClient.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
